--- a/notebook/finance.ipynb
+++ b/notebook/finance.ipynb
@@ -68,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ioaa1xHRkhrj",
-        "outputId": "ef7337ff-2d09-4560-e9f6-6868b86dd3db"
+        "outputId": "2f3dfdaf-673d-45aa-c561-4e02a22a645f"
       },
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,47 +187,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "y_wm9gLUUgjb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6aea5d49-4137-4bb8-a47c-2868d16f9a0e"
+        "outputId": "000dd7f3-23a3-4bb4-8a03-d680d1c861b0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Need \u001b[32m'write'\u001b[0m access token to create a Spaces repo.\n",
-            "\n",
-            "    _|    _|  _|    _|    _|_|_|    _|_|_|  _|_|_|  _|      _|    _|_|_|      _|_|_|_|    _|_|      _|_|_|  _|_|_|_|\n",
-            "    _|    _|  _|    _|  _|        _|          _|    _|_|    _|  _|            _|        _|    _|  _|        _|\n",
-            "    _|_|_|_|  _|    _|  _|  _|_|  _|  _|_|    _|    _|  _|  _|  _|  _|_|      _|_|_|    _|_|_|_|  _|        _|_|_|\n",
-            "    _|    _|  _|    _|  _|    _|  _|    _|    _|    _|    _|_|  _|    _|      _|        _|    _|  _|        _|\n",
-            "    _|    _|    _|_|      _|_|_|    _|_|_|  _|_|_|  _|      _|    _|_|_|      _|        _|    _|    _|_|_|  _|_|_|_|\n",
-            "\n",
-            "    To login, `huggingface_hub` requires a token generated from https://huggingface.co/settings/tokens .\n",
-            "Token: \n",
-            "Add token as git credential? (Y/n) Y\n",
-            "Token is valid (permission: write).\n",
-            "\u001b[1m\u001b[31mCannot authenticate through git-credential as no helper is defined on your machine.\n",
-            "You might have to re-authenticate when pushing to the Hugging Face Hub.\n",
-            "Run the following command in your terminal in case you want to set the 'store' credential helper as default.\n",
-            "\n",
-            "git config --global credential.helper store\n",
-            "\n",
-            "Read https://git-scm.com/book/en/v2/Git-Tools-Credential-Storage for more details.\u001b[0m\n",
-            "Token has not been saved to git credential helper.\n",
-            "Your token has been saved to /root/.cache/huggingface/token\n",
-            "Login successful\n",
-            "Creating new Spaces Repo in \u001b[32m'/content'\u001b[0m. Collecting metadata, press Enter to accept default value.\n",
-            "Enter Spaces app title [content]: stock_performance\n",
-            "Enter Gradio app file : performance.py\n",
-            "Enter Spaces hardware (cpu-basic, cpu-upgrade, t4-small, t4-medium, zero-a10g, a10g-small, a10g-large, a10g-largex2, a10g-largex4, a100-large) [cpu-basic]: \n",
-            "Any Spaces secrets (y/n) [n]: \n",
-            "Create Github Action to automatically update Space on 'git push'? [n]: \n",
             "Space available at \u001b[4;94mhttps://huggingface.co/spaces/gluo88/stock_performance\u001b[0m\n"
           ]
         }
@@ -249,14 +221,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
         "id": "1oDKEyOiAEGC",
-        "outputId": "995d9a70-0cc3-4f10-a875-b98ebd918f6c"
+        "outputId": "03b62e00-f7a2-4820-b761-671d939e8aa7"
       },
       "outputs": [
         {
@@ -300,7 +272,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7867, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7869, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -311,7 +283,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 15
         }
       ],
       "source": [
@@ -323,7 +295,7 @@
         "!pip install pandas\n",
         "!pip install numpy\n",
         "'''\n",
-        "script_version = '(2024_0104.2)'\n",
+        "script_version = '(2024_0104.3)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -337,7 +309,7 @@
         "\n",
         "# Define a list of years to calculate the trailing returns, cumulative returns, and so on\n",
         "# remove the row of current year row since it is not a full year.\n",
-        "years_list = [1, 2, 3, 5, 10, 15, 20, 25, 30]\n",
+        "years_list = [1, 2, 3, 5, 9, 10, 15, 20, 25, 30]\n",
         "\n",
         "# Set the stock tickers list\n",
         "tickers_lists = [[\"spy\", \"vfv.to\",\"xiu.to\"], #0\n",
@@ -386,17 +358,6 @@
         "        annual_returns_df = pd.DataFrame(annual_returns, columns=['Close'])\n",
         "        annual_returns_df.rename(columns={'Close': ticker}, inplace=True)\n",
         "        return annual_returns_df\n",
-        "\n",
-        "def date_label_conversion_strip_time(all_tickers_returns_df, calculation_end_date):\n",
-        "    all_tickers_returns_df.index=all_tickers_returns_df.index.date\n",
-        "    all_tickers_returns_df.index.name='date'\n",
-        "    # print(\"debug get_annual_returns_tickers_df\", all_tickers_returns_df)\n",
-        "    # Convert calculation_end_date to a datetime object, replace the index's mon/day portion of date\n",
-        "    calculation_end_date_datetime_obj = datetime.strptime(calculation_end_date, \"%Y-%m-%d\")\n",
-        "    all_tickers_returns_df.index = all_tickers_returns_df.index.map(\n",
-        "      lambda x: x.replace(month=calculation_end_date_datetime_obj.month,\n",
-        "      day=calculation_end_date_datetime_obj.day))\n",
-        "    return all_tickers_returns_df\n",
         "\n",
         "def get_annual_returns_tickers_df(tickers, calculation_end_date):\n",
         "    # Create an empty DataFrame to store all tickers' total returns\n",
@@ -552,12 +513,31 @@
         "        # Raised when the date string is not in the expected format\n",
         "        return False\n",
         "\n",
+        "def date_label_conversion_strip_time(all_tickers_returns_df, calculation_end_date):\n",
+        "    all_tickers_returns_df.index=all_tickers_returns_df.index.date\n",
+        "    all_tickers_returns_df.index.name='date'\n",
+        "    # print(\"debug get_annual_returns_tickers_df\", all_tickers_returns_df)\n",
+        "    # Convert calculation_end_date to a datetime object, replace the index's mon/day portion of date\n",
+        "    calculation_end_date_datetime_obj = datetime.strptime(calculation_end_date, \"%Y-%m-%d\")\n",
+        "    all_tickers_returns_df.index = all_tickers_returns_df.index.map(\n",
+        "      lambda x: x.replace(month=calculation_end_date_datetime_obj.month,\n",
+        "      day=calculation_end_date_datetime_obj.day))\n",
+        "    return all_tickers_returns_df\n",
+        "\n",
+        "help_info_str=\"Input Formats:\\n  \\\n",
+        "            1. ticker list....................Example:  spy vfv.to xiu.to xic.to xfn.to ry.to \\n \\\n",
+        "            2. One of default ticker list, a number between 1 and 5....Example:   0, or 1, ...,5 \\n \\\n",
+        "            3. CalculationEndDate as prefix.  Example:   2020-12-31 2 \\n \\\n",
+        "            .........................................2020-12-31 spy vfv.to xiu.to xic.to xfn.to ry.to \\n \\\n",
+        "            note: daily adjusted close data are from Yahoo Finance. \"\n",
+        "\n",
         "#---------------------------------------------------------------\n",
         "# step 5:  Display in web page using gradio\n",
         "# Gradio Web interface\n",
         "def calculation_response(message, history):\n",
+        "    # if there is no input, display help information\n",
         "    if message==\"\":\n",
-        "        return \"Please enter tickers such as:  spy vfv.to xiu.to xic.to xfn.to ry.to\"\n",
+        "        return help_info_str\n",
         "\n",
         "    tickers=message.split()\n",
         "\n",
@@ -575,6 +555,10 @@
         "    integer_value=str_to_integer(tickers[0])\n",
         "    if (integer_value >= 0 and integer_value <len(tickers_lists)):\n",
         "        tickers=tickers_lists[integer_value]\n",
+        "\n",
+        "    # if no tickers were set, display help information\n",
+        "    if len(tickers)==0:\n",
+        "        return help_info_str\n",
         "\n",
         "    #---------------\n",
         "    # Calculating Annual, Trailing, Cumulative, and CAGR & generating html for display\n",
@@ -641,6 +625,15 @@
         "output_dataframe = annual_returns_dataframe.round(4)*100\n",
         "print(output_dataframe)\n",
         "\n",
+        "help_info_str = \"\"\"Input Formats:\n",
+        "| {0:30} | {1:30} |\n",
+        "| {2:30} | {3:30} |\n",
+        "| {4:30} | {5:30} |\"\"\".format(\n",
+        "    \"1. ticker list.\", \"Example: spy vfv.to xiu.to xic.to xfn.to ry.to\",\n",
+        "    \"2. One of default ticker list.\", \"Example: 0|1|...|5\",\n",
+        "    \"3. CalculationEndDate as prefix.\", \"Example: 2020-12-31 2 or 2020-12-31 spy vfv.to xiu.to xic.to xfn.to ry.to\"\n",
+        ")\n",
+        "\n",
         "'''"
       ]
     },
@@ -661,8 +654,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
-        "outputId": "995d9a70-0cc3-4f10-a875-b98ebd918f6c",
-        "id": "XIuNiw-lL9LG"
+        "outputId": "03b62e00-f7a2-4820-b761-671d939e8aa7",
+        "id": "wnA2DUnM1Soz"
       },
       "outputs": [
         {
@@ -706,7 +699,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7867, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7869, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -717,7 +710,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 15
         }
       ],
       "source": [
@@ -729,7 +722,7 @@
         "!pip install pandas\n",
         "!pip install numpy\n",
         "'''\n",
-        "script_version = '(2024_0104.2)'\n",
+        "script_version = '(2024_0104.3)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -743,7 +736,7 @@
         "\n",
         "# Define a list of years to calculate the trailing returns, cumulative returns, and so on\n",
         "# remove the row of current year row since it is not a full year.\n",
-        "years_list = [1, 2, 3, 5, 10, 15, 20, 25, 30]\n",
+        "years_list = [1, 2, 3, 5, 9, 10, 15, 20, 25, 30]\n",
         "\n",
         "# Set the stock tickers list\n",
         "tickers_lists = [[\"spy\", \"vfv.to\",\"xiu.to\"], #0\n",
@@ -792,17 +785,6 @@
         "        annual_returns_df = pd.DataFrame(annual_returns, columns=['Close'])\n",
         "        annual_returns_df.rename(columns={'Close': ticker}, inplace=True)\n",
         "        return annual_returns_df\n",
-        "\n",
-        "def date_label_conversion_strip_time(all_tickers_returns_df, calculation_end_date):\n",
-        "    all_tickers_returns_df.index=all_tickers_returns_df.index.date\n",
-        "    all_tickers_returns_df.index.name='date'\n",
-        "    # print(\"debug get_annual_returns_tickers_df\", all_tickers_returns_df)\n",
-        "    # Convert calculation_end_date to a datetime object, replace the index's mon/day portion of date\n",
-        "    calculation_end_date_datetime_obj = datetime.strptime(calculation_end_date, \"%Y-%m-%d\")\n",
-        "    all_tickers_returns_df.index = all_tickers_returns_df.index.map(\n",
-        "      lambda x: x.replace(month=calculation_end_date_datetime_obj.month,\n",
-        "      day=calculation_end_date_datetime_obj.day))\n",
-        "    return all_tickers_returns_df\n",
         "\n",
         "def get_annual_returns_tickers_df(tickers, calculation_end_date):\n",
         "    # Create an empty DataFrame to store all tickers' total returns\n",
@@ -958,12 +940,31 @@
         "        # Raised when the date string is not in the expected format\n",
         "        return False\n",
         "\n",
+        "def date_label_conversion_strip_time(all_tickers_returns_df, calculation_end_date):\n",
+        "    all_tickers_returns_df.index=all_tickers_returns_df.index.date\n",
+        "    all_tickers_returns_df.index.name='date'\n",
+        "    # print(\"debug get_annual_returns_tickers_df\", all_tickers_returns_df)\n",
+        "    # Convert calculation_end_date to a datetime object, replace the index's mon/day portion of date\n",
+        "    calculation_end_date_datetime_obj = datetime.strptime(calculation_end_date, \"%Y-%m-%d\")\n",
+        "    all_tickers_returns_df.index = all_tickers_returns_df.index.map(\n",
+        "      lambda x: x.replace(month=calculation_end_date_datetime_obj.month,\n",
+        "      day=calculation_end_date_datetime_obj.day))\n",
+        "    return all_tickers_returns_df\n",
+        "\n",
+        "help_info_str=\"Input Formats:\\n  \\\n",
+        "            1. ticker list....................Example:  spy vfv.to xiu.to xic.to xfn.to ry.to \\n \\\n",
+        "            2. One of default ticker list, a number between 1 and 5....Example:   0, or 1, ...,5 \\n \\\n",
+        "            3. CalculationEndDate as prefix.  Example:   2020-12-31 2 \\n \\\n",
+        "            .........................................2020-12-31 spy vfv.to xiu.to xic.to xfn.to ry.to \\n \\\n",
+        "            note: daily adjusted close data are from Yahoo Finance. \"\n",
+        "\n",
         "#---------------------------------------------------------------\n",
         "# step 5:  Display in web page using gradio\n",
         "# Gradio Web interface\n",
         "def calculation_response(message, history):\n",
+        "    # if there is no input, display help information\n",
         "    if message==\"\":\n",
-        "        return \"Please enter tickers such as:  spy vfv.to xiu.to xic.to xfn.to ry.to\"\n",
+        "        return help_info_str\n",
         "\n",
         "    tickers=message.split()\n",
         "\n",
@@ -981,6 +982,10 @@
         "    integer_value=str_to_integer(tickers[0])\n",
         "    if (integer_value >= 0 and integer_value <len(tickers_lists)):\n",
         "        tickers=tickers_lists[integer_value]\n",
+        "\n",
+        "    # if no tickers were set, display help information\n",
+        "    if len(tickers)==0:\n",
+        "        return help_info_str\n",
         "\n",
         "    #---------------\n",
         "    # Calculating Annual, Trailing, Cumulative, and CAGR & generating html for display\n",
@@ -4255,7 +4260,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMbnLg59Gd0oLL/OFEVlR5d",
+      "authorship_tag": "ABX9TyPFmzLWyCNgsl6CEJK2qenm",
       "include_colab_link": true
     },
     "kernelspec": {
