--- a/notebook/finance.ipynb
+++ b/notebook/finance.ipynb
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -289,14 +289,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
         "id": "yMpT8mPFyfIr",
-        "outputId": "4241db41-0c7a-4906-8616-cb412206d7fe"
+        "outputId": "a7bde97c-7c01-4378-9d5e-81eac4e1f5d5"
       },
       "outputs": [
         {
@@ -340,7 +340,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7862, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7870, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -351,7 +351,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 21
         }
       ],
       "source": [
@@ -361,7 +361,7 @@
         "Calculate annual, trailing, cumumlative, and CAGR returns for multiple stocks.\n",
         "* The start date can be an arbitrary date.  The default is the current date.\n",
         "* annual return is displayed from the default current day, or an arbitrary given\n",
-        "  day (except fr Feb 29 for leap year) TODO-fix\n",
+        "  day (except for Feb 29 for leap year) TODO-fix\n",
         "* trailing, cumumlative returns are currently displayed from the month boundary (last day of Month)\n",
         "  prior to the given date.\n",
         "* However, trailing, cumumlative returns can be displayed\n",
@@ -371,7 +371,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-09.2)'\n",
+        "script_version = '(2024-01-09.3)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -391,7 +391,7 @@
         "tickers_lists = [[\"spy\", \"vfv.to\",\"xiu.to\"], #0\n",
         "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\", \"xiu.to\", \"vdy.to\", \"xfn.to\", \"ry.to\", \"td.to\", \"na.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"zlb.to\", \"cp.to\"], #1\n",
-        "    [\"spy\",\"vfv.to\", \"xiu.to\", \"fie.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\", \"cm.to\", \"bns.to\", \"cwb.to\",\n",
+        "    [\"spy\",\"vfv.to\", \"xiu.to\", \"fie.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\",\"td.to\", \"cm.to\", \"bns.to\", \"cwb.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"xdv.to\",\"cdz.to\",\"vdy.to\"],  #2\n",
         "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
         "    [\"^IXIC\",\"^GSPC\",\"spy\", \"vfv.to\", \"zsp.to\", \"xsp.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\"], #4\n",
@@ -731,6 +731,8 @@
         "    # Trailing Return\n",
         "    output_string2 = f\"\\nTrailing Total Return (%) as {calculation_end_date_for_others_str}\\n\"\n",
         "    output_dataframe2=get_trailing_return_all(tickers, annual_returns_dataframe)\n",
+        "    # Insert an empty to align the ticker symbols with annual return display\n",
+        "    output_dataframe2.insert(0, \"--------\", \"      \")\n",
         "    output_dataframe2.index.name=\"years\"\n",
         "    output_html2=output_string2 + output_dataframe2.to_html()\n",
         "\n",
@@ -821,8 +823,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
-        "outputId": "4241db41-0c7a-4906-8616-cb412206d7fe",
-        "id": "Y0YSOFQ8Hb3F"
+        "outputId": "a7bde97c-7c01-4378-9d5e-81eac4e1f5d5",
+        "id": "3JXpMwgteyYS"
       },
       "outputs": [
         {
@@ -866,7 +868,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7862, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7870, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -877,7 +879,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 21
         }
       ],
       "source": [
@@ -887,7 +889,7 @@
         "Calculate annual, trailing, cumumlative, and CAGR returns for multiple stocks.\n",
         "* The start date can be an arbitrary date.  The default is the current date.\n",
         "* annual return is displayed from the default current day, or an arbitrary given\n",
-        "  day (except fr Feb 29 for leap year) TODO-fix\n",
+        "  day (except for Feb 29 for leap year) TODO-fix\n",
         "* trailing, cumumlative returns are currently displayed from the month boundary (last day of Month)\n",
         "  prior to the given date.\n",
         "* However, trailing, cumumlative returns can be displayed\n",
@@ -897,7 +899,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-09.2)'\n",
+        "script_version = '(2024-01-09.3)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -917,7 +919,7 @@
         "tickers_lists = [[\"spy\", \"vfv.to\",\"xiu.to\"], #0\n",
         "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\", \"xiu.to\", \"vdy.to\", \"xfn.to\", \"ry.to\", \"td.to\", \"na.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"zlb.to\", \"cp.to\"], #1\n",
-        "    [\"spy\",\"vfv.to\", \"xiu.to\", \"fie.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\", \"cm.to\", \"bns.to\", \"cwb.to\",\n",
+        "    [\"spy\",\"vfv.to\", \"xiu.to\", \"fie.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\",\"td.to\", \"cm.to\", \"bns.to\", \"cwb.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"xdv.to\",\"cdz.to\",\"vdy.to\"],  #2\n",
         "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
         "    [\"^IXIC\",\"^GSPC\",\"spy\", \"vfv.to\", \"zsp.to\", \"xsp.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\"], #4\n",
@@ -1257,6 +1259,8 @@
         "    # Trailing Return\n",
         "    output_string2 = f\"\\nTrailing Total Return (%) as {calculation_end_date_for_others_str}\\n\"\n",
         "    output_dataframe2=get_trailing_return_all(tickers, annual_returns_dataframe)\n",
+        "    # Insert an empty to align the ticker symbols with annual return display\n",
+        "    output_dataframe2.insert(0, \"--------\", \"      \")\n",
         "    output_dataframe2.index.name=\"years\"\n",
         "    output_html2=output_string2 + output_dataframe2.to_html()\n",
         "\n",
@@ -5890,7 +5894,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5951,7 +5955,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMjT492Huq8WRgB8Dec0og5",
+      "authorship_tag": "ABX9TyPjVTClHKXdsBwhCTbHHiKl",
       "include_colab_link": true
     },
     "kernelspec": {
