--- a/notebook/finance.ipynb
+++ b/notebook/finance.ipynb
@@ -62,13 +62,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ioaa1xHRkhrj",
-        "outputId": "28496c13-4898-415a-8715-26a0926fff46"
+        "outputId": "b7476697-58fc-4a0f-ad31-355b4a2f915d"
       },
       "outputs": [
         {
@@ -268,15 +268,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Example 9 = Example 8 improvement- annualy for arbitrary start date (multiple stocks) annual,  trailing, cumumlative, and CAGR  returns (not neccesry only for calender year boundary ) - single retreival for a ticker"
-      ],
-      "metadata": {
-        "id": "bW2iQ-8knRZh"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "5Q2SHw-XtGon"
       },
@@ -286,14 +277,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 611
+          "height": 616
         },
         "id": "yMpT8mPFyfIr",
-        "outputId": "b81e9536-f86c-4809-ef58-f6e7b853da9b"
+        "outputId": "b154d785-51a3-450e-8478-d1bb96f5bafd"
       },
       "outputs": [
         {
@@ -301,19 +292,43 @@
           "name": "stdout",
           "text": [
             "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "Running on public URL: https://54be4632b57d877187.gradio.live\n",
+            "Note: opening Chrome Inspector may crash demo inside Colab notebooks.\n",
             "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
+            "To create a public link, set `share=True` in `launch()`.\n"
           ]
         },
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<IPython.core.display.HTML object>"
+              "<IPython.core.display.Javascript object>"
             ],
-            "text/html": [
-              "<div><iframe src=\"https://54be4632b57d877187.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            "application/javascript": [
+              "(async (port, path, width, height, cache, element) => {\n",
+              "                        if (!google.colab.kernel.accessAllowed && !cache) {\n",
+              "                            return;\n",
+              "                        }\n",
+              "                        element.appendChild(document.createTextNode(''));\n",
+              "                        const url = await google.colab.kernel.proxyPort(port, {cache});\n",
+              "\n",
+              "                        const external_link = document.createElement('div');\n",
+              "                        external_link.innerHTML = `\n",
+              "                            <div style=\"font-family: monospace; margin-bottom: 0.5rem\">\n",
+              "                                Running on <a href=${new URL(path, url).toString()} target=\"_blank\">\n",
+              "                                    https://localhost:${port}${path}\n",
+              "                                </a>\n",
+              "                            </div>\n",
+              "                        `;\n",
+              "                        element.appendChild(external_link);\n",
+              "\n",
+              "                        const iframe = document.createElement('iframe');\n",
+              "                        iframe.src = new URL(path, url).toString();\n",
+              "                        iframe.height = height;\n",
+              "                        iframe.allow = \"autoplay; camera; microphone; clipboard-read; clipboard-write;\"\n",
+              "                        iframe.width = width;\n",
+              "                        iframe.style.border = 0;\n",
+              "                        element.appendChild(iframe);\n",
+              "                    })(7870, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -324,7 +339,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 17
         }
       ],
       "source": [
@@ -344,7 +359,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-24.4)'\n",
+        "script_version = '(2024-01-24.7)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -366,10 +381,10 @@
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"zlb.to\", \"cp.to\"], #1\n",
         "    [\"spy\",\"vfv.to\", \"xiu.to\", \"zeb.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\",\"bns.to\", \"td.to\", \"cm.to\", \"cwb.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"xdv.to\",\"cdz.to\",\"vdy.to\"],  #2\n",
-        "    [\"^GSPC\",\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
+        "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
         "    [\"^GSPC\",\"spy\",\"voo\",\"ivv\", \"vfv.to\", \"zsp.to\",\"xus.to\", \"xsp.to\",\"^IXIC\",\"qqq\",\"hxq.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\", \"fie.to\"], #4\n",
         "    [\"^IXIC\",\"ONEQ\",\"CIBR\",\"QQJG\", \"qqq\", \"spy\", \"vfv.to\", \"HXQ.to\", \"ZQQ.to\", \"XQQ.to\", \"QQC.to\"],  #5\n",
-        "    [\"goog\", \"msft\"]\n",
+        "    [\"goog\", \"msft\", \"^GSPC\"]\n",
         "]\n",
         "\n",
         "#==============================================================================\n",
@@ -465,7 +480,15 @@
         "            if all_tickers_returns_df.empty:\n",
         "                all_tickers_returns_df = ticker_returns_df\n",
         "            else:\n",
-        "                all_tickers_returns_df = pd.concat([all_tickers_returns_df, ticker_returns_df], axis=1)  # Concatenate DataFrames\n",
+        "                '''\n",
+        "                When running in  huggingface, pd.concat changed the index order of ticker_returns_df\n",
+        "                when ticker_returns_df has more rows than all_tickers_returns_df. However, it is ok\n",
+        "                running in colab.  Therefore, use pd.merge to replace pd.concat.\n",
+        "                all_tickers_returns_df = pd.concat([all_tickers_returns_df, ticker_returns_df],axis=1,join='outer')  # Concatenate DataFrames\n",
+        "                all_tickers_returns_df.sort_index() # index may be changed when running in huggingface\n",
+        "                '''\n",
+        "                all_tickers_returns_df = pd.merge(all_tickers_returns_df, ticker_returns_df,\n",
+        "                        left_index=True, right_index=True, how='outer')\n",
         "        else:\n",
         "            # New column with NaN values\n",
         "            new_column_name = ticker\n",
@@ -800,7 +823,7 @@
         "    return  output_html\n",
         "\n",
         "demo = gr.ChatInterface(calculation_response)\n",
-        "demo.launch(debug=False, share=True)\n"
+        "demo.launch(debug=False, share=False)\n"
       ]
     },
     {
@@ -867,10 +890,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 611
+          "height": 616
         },
-        "outputId": "b81e9536-f86c-4809-ef58-f6e7b853da9b",
-        "id": "ekR4YcYc9ZDO"
+        "outputId": "b154d785-51a3-450e-8478-d1bb96f5bafd",
+        "id": "uqiMbu-oak9u"
       },
       "outputs": [
         {
@@ -878,19 +901,43 @@
           "name": "stdout",
           "text": [
             "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "Running on public URL: https://54be4632b57d877187.gradio.live\n",
+            "Note: opening Chrome Inspector may crash demo inside Colab notebooks.\n",
             "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
+            "To create a public link, set `share=True` in `launch()`.\n"
           ]
         },
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<IPython.core.display.HTML object>"
+              "<IPython.core.display.Javascript object>"
             ],
-            "text/html": [
-              "<div><iframe src=\"https://54be4632b57d877187.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            "application/javascript": [
+              "(async (port, path, width, height, cache, element) => {\n",
+              "                        if (!google.colab.kernel.accessAllowed && !cache) {\n",
+              "                            return;\n",
+              "                        }\n",
+              "                        element.appendChild(document.createTextNode(''));\n",
+              "                        const url = await google.colab.kernel.proxyPort(port, {cache});\n",
+              "\n",
+              "                        const external_link = document.createElement('div');\n",
+              "                        external_link.innerHTML = `\n",
+              "                            <div style=\"font-family: monospace; margin-bottom: 0.5rem\">\n",
+              "                                Running on <a href=${new URL(path, url).toString()} target=\"_blank\">\n",
+              "                                    https://localhost:${port}${path}\n",
+              "                                </a>\n",
+              "                            </div>\n",
+              "                        `;\n",
+              "                        element.appendChild(external_link);\n",
+              "\n",
+              "                        const iframe = document.createElement('iframe');\n",
+              "                        iframe.src = new URL(path, url).toString();\n",
+              "                        iframe.height = height;\n",
+              "                        iframe.allow = \"autoplay; camera; microphone; clipboard-read; clipboard-write;\"\n",
+              "                        iframe.width = width;\n",
+              "                        iframe.style.border = 0;\n",
+              "                        element.appendChild(iframe);\n",
+              "                    })(7870, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -901,7 +948,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 17
         }
       ],
       "source": [
@@ -921,7 +968,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-24.4)'\n",
+        "script_version = '(2024-01-24.7)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -943,10 +990,10 @@
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"zlb.to\", \"cp.to\"], #1\n",
         "    [\"spy\",\"vfv.to\", \"xiu.to\", \"zeb.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\",\"bns.to\", \"td.to\", \"cm.to\", \"cwb.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"xdv.to\",\"cdz.to\",\"vdy.to\"],  #2\n",
-        "    [\"^GSPC\",\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
+        "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
         "    [\"^GSPC\",\"spy\",\"voo\",\"ivv\", \"vfv.to\", \"zsp.to\",\"xus.to\", \"xsp.to\",\"^IXIC\",\"qqq\",\"hxq.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\", \"fie.to\"], #4\n",
         "    [\"^IXIC\",\"ONEQ\",\"CIBR\",\"QQJG\", \"qqq\", \"spy\", \"vfv.to\", \"HXQ.to\", \"ZQQ.to\", \"XQQ.to\", \"QQC.to\"],  #5\n",
-        "    [\"goog\", \"msft\"]\n",
+        "    [\"goog\", \"msft\", \"^GSPC\"]\n",
         "]\n",
         "\n",
         "#==============================================================================\n",
@@ -1042,7 +1089,15 @@
         "            if all_tickers_returns_df.empty:\n",
         "                all_tickers_returns_df = ticker_returns_df\n",
         "            else:\n",
-        "                all_tickers_returns_df = pd.concat([all_tickers_returns_df, ticker_returns_df], axis=1)  # Concatenate DataFrames\n",
+        "                '''\n",
+        "                When running in  huggingface, pd.concat changed the index order of ticker_returns_df\n",
+        "                when ticker_returns_df has more rows than all_tickers_returns_df. However, it is ok\n",
+        "                running in colab.  Therefore, use pd.merge to replace pd.concat.\n",
+        "                all_tickers_returns_df = pd.concat([all_tickers_returns_df, ticker_returns_df],axis=1,join='outer')  # Concatenate DataFrames\n",
+        "                all_tickers_returns_df.sort_index() # index may be changed when running in huggingface\n",
+        "                '''\n",
+        "                all_tickers_returns_df = pd.merge(all_tickers_returns_df, ticker_returns_df,\n",
+        "                        left_index=True, right_index=True, how='outer')\n",
         "        else:\n",
         "            # New column with NaN values\n",
         "            new_column_name = ticker\n",
@@ -1377,7 +1432,7 @@
         "    return  output_html\n",
         "\n",
         "demo = gr.ChatInterface(calculation_response)\n",
-        "demo.launch(debug=False, share=True)\n"
+        "demo.launch(debug=False, share=False)\n"
       ]
     },
     {
@@ -6477,13 +6532,68 @@
         "df = pd.DataFrame({'Company name': companies})\n",
         "df['Company symbol'] = df.apply(lambda x: get_symbol(x['Company name']), axis=1)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# test"
+      ],
+      "metadata": {
+        "id": "5KCn1JM1BtQn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " CODE: ###\n",
+        " all_tickers_returns_df = pd.concat([all_tickers_returns_df, ticker_returns_df], axis=1)\n",
+        " ###\n",
+        " both all_tickers_returns_df and ticker_returns_df are Pandas DataFrame variables,\n",
+        " but ticker_returns_df has more rows than all_tickers_returns_df.\n",
+        " As result, index key order for ticker_returns_df has been changed after the concatenation\n",
+        "\n",
+        " how to  concat two dataframes vertically with preserving index key order?\n",
+        "\n",
+        "\n",
+        "\t          vgg.to\n",
+        "2014-12-31\t21.49\n",
+        "2015-12-31\t14.58\n",
+        "2016-12-31\t7.28\n",
+        "2017-12-31\t13.99\n",
+        "2018-12-31\t5.20\n",
+        "2019-12-31\t23.32\n",
+        "2020-12-31\t12.67\n",
+        "2021-12-31\t22.23\n",
+        "2022-12-31\t-4.21\n",
+        "2023-12-31\t11.58\n",
+        "2024-01-24\t3.44\n",
+        "\n",
+        "           vgg.to\tvfv.to\n",
+        "2013-12-31\tNaN\t  40.91\n",
+        "2014-12-31\t21.49\t24.05\n",
+        "2015-12-31\t14.58\t20.29\n",
+        "2016-12-31\t7.28\t7.63\n",
+        "2017-12-31\t13.99\t13.68\n",
+        "2018-12-31\t5.20\t2.94\n",
+        "2019-12-31\t23.32\t25.15\n",
+        "2020-12-31\t12.67\t15.61\n",
+        "2021-12-31\t22.23\t27.51\n",
+        "2022-12-31\t-4.21\t-12.58\n",
+        "2023-12-31\t11.58\t23.23\n",
+        "2024-01-24\t3.44\t4.18\n"
+      ],
+      "metadata": {
+        "id": "lJ8TlzF2By38"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwrBxfcXI/Fw/nl/Qw/3C8",
+      "authorship_tag": "ABX9TyMCu0M1eUEdW3+t+VD5OD3u",
       "include_colab_link": true
     },
     "kernelspec": {
