--- a/notebook/finance.ipynb
+++ b/notebook/finance.ipynb
@@ -62,13 +62,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ioaa1xHRkhrj",
-        "outputId": "b7476697-58fc-4a0f-ad31-355b4a2f915d"
+        "outputId": "99f64318-d24b-43ce-a1f8-c52a0974cc6d"
       },
       "outputs": [
         {
@@ -277,14 +277,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
         "id": "yMpT8mPFyfIr",
-        "outputId": "b154d785-51a3-450e-8478-d1bb96f5bafd"
+        "outputId": "d449186d-e987-4444-a703-cdcfb020ce7b"
       },
       "outputs": [
         {
@@ -328,7 +328,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7870, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7871, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -339,10 +339,11 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 21
         }
       ],
       "source": [
+        "from math import nan\n",
         "'''\n",
         "Example 8 for using yfinance\n",
         "\n",
@@ -359,7 +360,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-24.7)'\n",
+        "script_version = '(2024-01-25.1)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -699,7 +700,15 @@
         "    yearly_data['CalReturn'] = (yearly_data['Close'] + yearly_data['DivSum']) / yearly_data['Close'].shift(1) - 1\n",
         "    # set the display format\n",
         "    yearly_data[['DivRatio','Return','TotalReturn','CalReturn']] = yearly_data[['DivRatio','Return','TotalReturn','CalReturn']].mul(100).round(2)\n",
-        "    yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']] = yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']].applymap(\"{:.2f}%\".format)\n",
+        "    '''\n",
+        "    #yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']] = yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']].applymap(\"{:.2f}%\".format)\n",
+        "    yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']]= \\\n",
+        "     yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']].applymap(lambda x: f\"{x:.2f}%\" if not pd.isna(x) else \"NaN\")\n",
+        "    '''\n",
+        "    # Use .applymap() and lambda to format the values as percentage strings only if they are not NaN\n",
+        "    yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']]= \\\n",
+        "         yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']].applymap(lambda x: f\"{x:.2f}%\" if not pd.isna(x) else x)\n",
+        "\n",
         "    # 'Date' column is no longer required\n",
         "    yearly_data.drop('Date', axis=1, inplace=True)\n",
         "    return yearly_data\n",
@@ -892,8 +901,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
-        "outputId": "b154d785-51a3-450e-8478-d1bb96f5bafd",
-        "id": "uqiMbu-oak9u"
+        "outputId": "d449186d-e987-4444-a703-cdcfb020ce7b",
+        "id": "BxvhT5bj6-v9"
       },
       "outputs": [
         {
@@ -937,7 +946,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7870, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7871, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -948,10 +957,11 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 21
         }
       ],
       "source": [
+        "from math import nan\n",
         "'''\n",
         "Example 8 for using yfinance\n",
         "\n",
@@ -968,7 +978,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-24.7)'\n",
+        "script_version = '(2024-01-25.1)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -1308,7 +1318,15 @@
         "    yearly_data['CalReturn'] = (yearly_data['Close'] + yearly_data['DivSum']) / yearly_data['Close'].shift(1) - 1\n",
         "    # set the display format\n",
         "    yearly_data[['DivRatio','Return','TotalReturn','CalReturn']] = yearly_data[['DivRatio','Return','TotalReturn','CalReturn']].mul(100).round(2)\n",
-        "    yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']] = yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']].applymap(\"{:.2f}%\".format)\n",
+        "    '''\n",
+        "    #yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']] = yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']].applymap(\"{:.2f}%\".format)\n",
+        "    yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']]= \\\n",
+        "     yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']].applymap(lambda x: f\"{x:.2f}%\" if not pd.isna(x) else \"NaN\")\n",
+        "    '''\n",
+        "    # Use .applymap() and lambda to format the values as percentage strings only if they are not NaN\n",
+        "    yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']]= \\\n",
+        "         yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']].applymap(lambda x: f\"{x:.2f}%\" if not pd.isna(x) else x)\n",
+        "\n",
         "    # 'Date' column is no longer required\n",
         "    yearly_data.drop('Date', axis=1, inplace=True)\n",
         "    return yearly_data\n",
@@ -6546,44 +6564,41 @@
       "cell_type": "code",
       "source": [
         " CODE: ###\n",
-        " all_tickers_returns_df = pd.concat([all_tickers_returns_df, ticker_returns_df], axis=1)\n",
+        " yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']] = yearly_data[['DivRatio','Return', 'TotalReturn', 'CalReturn']].applymap(\"{:.2f}%\".format)\n",
         " ###\n",
-        " both all_tickers_returns_df and ticker_returns_df are Pandas DataFrame variables,\n",
-        " but ticker_returns_df has more rows than all_tickers_returns_df.\n",
-        " As result, index key order for ticker_returns_df has been changed after the concatenation\n",
+        " In the above  CODE, yearly_data ia Pandas DataFrame variable. The code is to add % to every values in the columns of\n",
+        " 'DivRatio','Return', 'TotalReturn', 'CalReturn'.   Even when the value is NaN,  % is still added resulting NaN%.\n",
+        " Please modify the code to add % to all vaules except for NaN.\n",
         "\n",
-        " how to  concat two dataframes vertically with preserving index key order?\n",
-        "\n",
-        "\n",
-        "\t          vgg.to\n",
-        "2014-12-31\t21.49\n",
-        "2015-12-31\t14.58\n",
-        "2016-12-31\t7.28\n",
-        "2017-12-31\t13.99\n",
-        "2018-12-31\t5.20\n",
-        "2019-12-31\t23.32\n",
-        "2020-12-31\t12.67\n",
-        "2021-12-31\t22.23\n",
-        "2022-12-31\t-4.21\n",
-        "2023-12-31\t11.58\n",
-        "2024-01-24\t3.44\n",
-        "\n",
-        "           vgg.to\tvfv.to\n",
-        "2013-12-31\tNaN\t  40.91\n",
-        "2014-12-31\t21.49\t24.05\n",
-        "2015-12-31\t14.58\t20.29\n",
-        "2016-12-31\t7.28\t7.63\n",
-        "2017-12-31\t13.99\t13.68\n",
-        "2018-12-31\t5.20\t2.94\n",
-        "2019-12-31\t23.32\t25.15\n",
-        "2020-12-31\t12.67\t15.61\n",
-        "2021-12-31\t22.23\t27.51\n",
-        "2022-12-31\t-4.21\t-12.58\n",
-        "2023-12-31\t11.58\t23.23\n",
-        "2024-01-24\t3.44\t4.18\n"
+        "\n"
       ],
       "metadata": {
-        "id": "lJ8TlzF2By38"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "id": "lJ8TlzF2By38",
+        "outputId": "5ecca083-7d78-483e-94ac-bb6fd2cce3b4"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers (<ipython-input-5-ca93643a7020>, line 22)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-ca93643a7020>\"\u001b[0;36m, line \u001b[0;32m22\u001b[0m\n\u001b[0;31m    2024-01-24\t3.44\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "It"
+      ],
+      "metadata": {
+        "id": "xlH4boj8epMP"
       },
       "execution_count": null,
       "outputs": []
@@ -6593,7 +6608,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMCu0M1eUEdW3+t+VD5OD3u",
+      "authorship_tag": "ABX9TyN6hwn77GE3BJ+lxqDT57np",
       "include_colab_link": true
     },
     "kernelspec": {
